Re-configured WRO4J

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <targetGroups>all,vendor</targetGroups>
+                            <targetGroups>all,tatami</targetGroups>
                             <minimize>false</minimize>
                             <destinationFolder>${basedir}/src/main/webapp/WEB-INF/generated-wro4j</destinationFolder>
                             <contextFolder>${basedir}/src/main/webapp</contextFolder>
@@ -141,7 +141,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <targetGroups>all,vendor</targetGroups>
+                            <targetGroups>all,tatami</targetGroups>
                             <minimize>false</minimize>
                             <destinationFolder>${basedir}/src/main/webapp/WEB-INF/generated-wro4j</destinationFolder>
                             <contextFolder>${basedir}/src/main/webapp</contextFolder>
