Apple Push notification first tests

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -30,6 +30,10 @@ smtp.password=${tatami.smtp.password}
 smtp.from=${tatami.smtp.from}
 smtp.tls=${tatami.smtp.tls}
 
+#Apple push notifications
+apple.push.certificate=${apple.push.certificate}
+apple.push.password=${apple.push.password}
+
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
