--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
                 <!-- Spring profiles available : tatamibot, metrics, apple-push -->
                 <spring.profiles.active></spring.profiles.active>
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
-                <log4j.loglevel>INFO</log4j.loglevel>
-                <log4j.appender>PAPERTRAIL</log4j.appender>
+                <logback.loglevel>INFO</logback.loglevel>
+                <logback.appender>PAPERTRAIL</logback.appender>
                 <ehcache.maxBytesLocalHeap>128M</ehcache.maxBytesLocalHeap>
                 <tatami.url>http://sandbox.tatamisoft.com</tatami.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
@@ -111,8 +111,8 @@
                 <spring.profiles.active></spring.profiles.active>
                 <jetty.port>80</jetty.port>
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
-                <log4j.loglevel>INFO</log4j.loglevel>
-                <log4j.appender>PAPERTRAIL</log4j.appender>
+                <logback.loglevel>INFO</logback.loglevel>
+                <logback.appender>PAPERTRAIL</logback.appender>
                 <ehcache.maxBytesLocalHeap>512M</ehcache.maxBytesLocalHeap>
                 <tatami.url>https://tatami.ippon.fr</tatami.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
@@ -168,8 +168,8 @@
                 <!-- Spring profiles available : tatamibot, metrics, apple-push -->
                 <spring.profiles.active></spring.profiles.active>
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
-                <log4j.loglevel>WARN</log4j.loglevel>
-                <log4j.appender>CONSOLE</log4j.appender>
+                <logback.loglevel>WARN</logback.loglevel>
+                <logback.appender>CONSOLE</logback.appender>
                 <ehcache.maxBytesLocalHeap>64M</ehcache.maxBytesLocalHeap>
                 <tatami.automatic.registration>true</tatami.automatic.registration>
             </properties>
@@ -374,8 +374,8 @@
         <!-- Default project properties -->
         <jetty.port>8080</jetty.port>
         <jetty.scanIntervalSeconds>1</jetty.scanIntervalSeconds>
-        <log4j.loglevel>DEBUG</log4j.loglevel>
-        <log4j.appender>CONSOLE</log4j.appender>
+        <logback.loglevel>DEBUG</logback.loglevel>
+        <logback.appender>CONSOLE</logback.appender>
         <ehcache.maxBytesLocalHeap>64M</ehcache.maxBytesLocalHeap>
         <tatami.version>${project.version}</tatami.version>
         <tatami.url>http://localhost:8080</tatami.url>
@@ -409,7 +409,8 @@
         <spring.security.version>3.1.3.RELEASE</spring.security.version>
         <elasticsearch.version>0.20.6</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
-        <slf4j.version>1.5.8</slf4j.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.0.13</logback.version>
         <httpclient.core.version>4.2.2</httpclient.core.version> <!-- pour compatiblité selenium -->
         <httpclient.client.version>4.2.2</httpclient.client.version> <!-- pour compatiblité selenium -->
         <hector.version>1.1-4</hector.version>
@@ -556,6 +557,20 @@
             <artifactId>joda-time</artifactId>
             <version>${jodatime.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
@@ -684,7 +699,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
