logback syslog parametrization

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
                 <logback.loglevel>INFO</logback.loglevel>
                 <logback.appender>PAPERTRAIL</logback.appender>
+                <logback.syslogHost>logs.papertrailapp.com:38143</logback.syslogHost>
                 <ehcache.maxBytesLocalHeap>128M</ehcache.maxBytesLocalHeap>
                 <tatami.url>http://sandbox.tatamisoft.com</tatami.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
@@ -113,6 +114,7 @@
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
                 <logback.loglevel>INFO</logback.loglevel>
                 <logback.appender>PAPERTRAIL</logback.appender>
+                <logback.syslogHost>logs.papertrailapp.com:38143</logback.syslogHost>
                 <ehcache.maxBytesLocalHeap>512M</ehcache.maxBytesLocalHeap>
                 <tatami.url>https://tatami.ippon.fr</tatami.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
@@ -376,6 +378,7 @@
         <jetty.scanIntervalSeconds>1</jetty.scanIntervalSeconds>
         <logback.loglevel>DEBUG</logback.loglevel>
         <logback.appender>CONSOLE</logback.appender>
+        <logback.syslogHost>localhost</logback.syslogHost>
         <ehcache.maxBytesLocalHeap>64M</ehcache.maxBytesLocalHeap>
         <tatami.version>${project.version}</tatami.version>
         <tatami.url>http://localhost:8080</tatami.url>
@@ -569,7 +572,6 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>net.sf.ehcache</groupId>
