possible fix de wro4j

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <targetGroups>tatami-vendor,tatami-app,tatami-account</targetGroups>
+                            <targetGroups>tatami-vendor,tatami-app,tatami-account,tatami-app-account</targetGroups>
                             <minimize>false</minimize>
                             <destinationFolder>${basedir}/src/main/webapp/WEB-INF/generated-wro4j</destinationFolder>
                             <contextFolder>${basedir}/src/main/webapp</contextFolder>
@@ -146,7 +146,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <targetGroups>tatami-vendor,tatami-app,tatami-account</targetGroups>
+                            <targetGroups>tatami-vendor,tatami-app,tatami-account,tatami-app-account</targetGroups>
                             <minimize>false</minimize>
                             <destinationFolder>${basedir}/src/main/webapp/WEB-INF/generated-wro4j</destinationFolder>
                             <contextFolder>${basedir}/src/main/webapp</contextFolder>
