Ajout de miniatures dans les fichiers

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -22,6 +22,10 @@ tatami.ldapauth.url=${tatami.ldapauth.url}
 tatami.ldapauth.searchbase=${tatami.ldapauth.searchbase}
 tatami.ldapauth.searchfilter=${tatami.ldapauth.searchfilter}
 
+#Attachment thumbnail generation
+#Files extension for which we create thumbnails, comma separated
+tatami.attachment.thumbnail.extensions=.gif,.jpg,.jpeg,.png
+
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
 smtp.port=${tatami.smtp.port}
