fix avant pull request

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -16,7 +16,7 @@ tatami.metrics.graphite.host=${tatami.metrics.graphite.host}
 tatami.metrics.graphite.port=${tatami.metrics.graphite.port}
 
 #User configuration
-tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com,vdebelil@ippon.fr,ggruel@ippon.fr,ber@test.com
+tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com,vdebelil@ippon.fr,ggruel@ippon.fr
 tatami.ldapauth.domain=ippon.fr
 tatami.ldapauth.url=${tatami.ldapauth.url}
 tatami.ldapauth.searchbase=${tatami.ldapauth.searchbase}
