--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -14,6 +14,9 @@ tatami.automatic.registration=${tatami.automatic.registration}
 #Monitoring using Yammer Metrics
 tatami.metrics.graphite.host=${tatami.metrics.graphite.host}
 tatami.metrics.graphite.port=${tatami.metrics.graphite.port}
+tatami.metrics.riemann.host=${tatami.metrics.riemann.host}
+tatami.metrics.riemann.port=${tatami.metrics.riemann.port}
+tatami.metrics.riemann.tags=${tatami.metrics.riemann.tags}
 
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com,vdebelil@ippon.fr,ggruel@ippon.fr
