Corrections: Storage and suscription level configurable using tatami.properties

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -60,3 +60,16 @@ elasticsearch.cluster.default.communication.port=9300
 
 #Tatami Bot configuration
 tatami.bot.enabled=${tatami.bot.enabled}
+
+#File & account size configuration
+#in bytes
+file.max.size=10000000
+#in Mb
+storage.basic.max.size=10
+storage.premium.max.size=1000
+storage.ippon.max.size=100000
+#
+#SubscriptionLevel
+suscription.level.free=0
+suscription.level.premium=1
+suscription.level.ippon=-1
