Allow to configuration Cassandra replication factor from tatami.properties

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -45,6 +45,7 @@ apple.push.password=${apple.push.password}
 cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
+cassandra.replicationFactor=1
 
 # Search engine configuration : you can use either Elastic Search in embedded or in remote mode
 # - In embedded mode, Elastic Search runs inside Tatami : this is useful for development, test, and small installations
