--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -1,8 +1,4 @@
 {
   "name": "Tatami",
-  "version": "4.0.0",
-  "dependencies": {
-    "angular-resource": "https://code.angularjs.org/1.3.0-rc.4/angular-resource.js",
-    "angular": "1.3.0-rc.4"
-  }
+  "version": "4.0.0"
 }
