--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -6,6 +6,7 @@
     "angular-resource": "~1.3.0",
     "angular-sanitize": "~1.3.0",
     "marked": "~0.3.2",
-    "angular-moment": "~0.8.2"
+    "angular-moment": "~0.8.2",
+    "angular-translate": "~2.4.2"
   }
 }
